[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/SETTINGS MENU.png" type="Texture" id=1]
[ext_resource path="res://assets/background_game_G.png" type="Texture" id=2]
[ext_resource path="res://assets/levels menu/MENU BUTTON.png" type="Texture" id=3]
[ext_resource path="res://assets/levels menu/MENU BUTTON DOWN.png" type="Texture" id=4]
[ext_resource path="res://assets/levels menu/SHOP BUTTON DOWN.png" type="Texture" id=5]
[ext_resource path="res://assets/levels menu/SHOP BUTTON.png" type="Texture" id=6]
[ext_resource path="res://assets/levels menu/CANCEL DOWN.png" type="Texture" id=7]
[ext_resource path="res://assets/levels menu/CANCEL UP.png" type="Texture" id=8]
[ext_resource path="res://scenes/settings/settings_windows.gd" type="Script" id=9]
[ext_resource path="res://assets/AVAILABLE SOON.png" type="Texture" id=10]

[node name="settings_windows" type="CanvasLayer"]
offset = Vector2( 750, 0 )
transform = Transform2D( 1, 0, 0, 1, 750, 0 )
script = ExtResource( 9 )

[node name="Sprite2" type="TextureButton" parent="."]
modulate = Color( 0.227451, 0.231373, 0.309804, 0.611765 )
margin_left = -16.0
margin_right = 781.0
margin_bottom = 1597.0
rect_scale = Vector2( 1.2, 1 )
disabled = true
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 353, 913 )
texture = ExtResource( 1 )

[node name="sound_check" type="CheckButton" parent="Sprite"]
margin_left = 15.0
margin_top = -377.0
margin_right = 91.0
margin_bottom = -337.0
rect_scale = Vector2( 3, 3 )
focus_mode = 0
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
flat = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="haptic_check" type="CheckButton" parent="Sprite"]
margin_left = 16.0
margin_top = -21.0
margin_right = 92.0
margin_bottom = 19.0
rect_scale = Vector2( 3, 3 )
focus_mode = 0
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_check" type="CheckButton" parent="Sprite"]
margin_left = 16.0
margin_top = -145.0
margin_right = 92.0
margin_bottom = -105.0
rect_scale = Vector2( 3, 3 )
focus_mode = 0
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_check" type="CheckButton" parent="Sprite"]
margin_left = 13.0
margin_top = -258.0
margin_right = 89.0
margin_bottom = -218.0
rect_scale = Vector2( 3, 3 )
focus_mode = 0
shortcut_in_tooltip = false
pressed = true
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="TextureButton" parent="Sprite"]
margin_left = -242.0
margin_top = 214.0
margin_right = -27.0
margin_bottom = 322.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shop" type="TextureButton" parent="Sprite"]
margin_left = 28.0
margin_top = 216.0
margin_right = 243.0
margin_bottom = 324.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close" type="TextureButton" parent="Sprite"]
margin_left = -44.0
margin_top = 394.0
margin_right = 58.0
margin_bottom = 498.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="available_soon" type="Sprite" parent="."]
position = Vector2( 336, -70 )
texture = ExtResource( 10 )

[connection signal="pressed" from="Sprite/sound_check" to="." method="_on_sound_check_pressed"]
[connection signal="pressed" from="Sprite/haptic_check" to="." method="_on_haptic_check_pressed"]
[connection signal="pressed" from="Sprite/music_check" to="." method="_on_music_check_pressed"]
[connection signal="pressed" from="Sprite/sfx_check" to="." method="_on_sfx_check_pressed"]
[connection signal="pressed" from="Sprite/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Sprite/shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="Sprite/close" to="." method="_on_close_pressed"]
